Ordered list bullet alignment fixes

--- a/docroot/themes/custom/mass_admin_theme/css/overrides/editor.css
+++ b/docroot/themes/custom/mass_admin_theme/css/overrides/editor.css
@@ -29,6 +29,11 @@
   margin-left: 0;
 }
 
+.ck-content ol {
+  overflow: hidden;
+  padding-left: 25px;
+}
+
 .ck-content ul ul,
 .ck-content ol ul {
   padding-left: 20px;
