--- a/docroot/themes/custom/mass_admin_theme/css/overrides/layout-paragraphs.css
+++ b/docroot/themes/custom/mass_admin_theme/css/overrides/layout-paragraphs.css
@@ -357,6 +357,11 @@ html:has([data-fullscreen="fullscreenoverlay"]) .ck.ck-dropdown__panel.ck-dropdo
   margin-left: 0;
 }
 
+.js-lpb-component-list .ma__rich-text ol {
+  overflow: hidden;
+  padding-left: 25px;
+}
+
 .js-lpb-component-list .ma__callout-message .ma__rich-text ul:last-child {
   margin-bottom: revert;
 }
